Update java-publishing.yml to use new parameter FolderLocation

--- a/eng/pipelines/templates/steps/java-publishing.yml
+++ b/eng/pipelines/templates/steps/java-publishing.yml
@@ -113,7 +113,7 @@ steps:
           ConnectedServiceName: 'ESRP Release Service'
           Intent: 'PackageDistribution'
           ContentType: 'Maven'
-          PackageLocation: ${{ parameters.OutputDirectory }}
+          FolderLocation: ${{ parameters.OutputDirectory }}
           Owners: $(Build.RequestedForEmail)
           Approvers: 'wesh@microsoft.com'
           ServiceEndpointUrl: 'https://api.esrp.microsoft.com'
