--- a/sdk/communication/communication-tests-template.yml
+++ b/sdk/communication/communication-tests-template.yml
@@ -7,7 +7,7 @@ parameters:
   default: not-specified
 - name: Clouds
   type: string
-  default: 'Public, PPE, Int'
+  default: 'Public, Int'
 - name: TestMode
   type: string
   default: 'LIVE'
@@ -33,15 +33,6 @@ parameters:
         - $(sub-config-azure-cloud-test-resources)
         - $(sub-config-communication-services-cloud-test-resources-common)
         - $(sub-config-communication-services-cloud-test-resources-java)
-    PPE:
-      SubscriptionConfigurations:
-        - $(sub-config-communication-ppe-test-resources-common)
-        - $(sub-config-communication-ppe-test-resources-java)
-
-      # This only affects the phone-numbers package
-      MatrixReplace:
-        - SKIP_UPDATE_CAPABILITIES_LIVE_TESTS=false/true
-        - SKIP_SIP_ROUTING_LIVE_TESTS=false/true
     Int:
       SubscriptionConfigurations:
         - $(sub-config-communication-int-test-resources-common)
