--- a/sdk/communication/azure-communication-phonenumbers/tests.yml
+++ b/sdk/communication/azure-communication-phonenumbers/tests.yml
@@ -1,36 +1,69 @@
 trigger: none
+parameters:
+- name: PackageName
+  type: string
+  default: not-specified
+- name: SafeName
+  type: string
+  default: not-specified
+- name: Clouds
+  type: string
+  default: 'Public, Int'
+- name: TestMode
+  type: string
+  default: 'LIVE'
+- name: TestResourceDirectories
+  type: object
+  default:
+    - communication/test-resources/
+- name: EnVars
+  type: object
+  default: {}
+- name: MatrixConfigs
+  type: object
+  default:
+    - Name: Java_live_test_base
+      Path: eng/pipelines/templates/stages/platform-matrix.json
+      Selection: sparse
+      GenerateVMJobs: true
+- name: CloudConfig
+  type: object
+  default:
+    Public:
+      SubscriptionConfigurations:
+        - $(sub-config-azure-cloud-test-resources)
+        - $(sub-config-communication-services-cloud-test-resources-common)
+        - $(sub-config-communication-services-cloud-test-resources-java)
+    Int:
+      SubscriptionConfigurations:
+        - $(sub-config-communication-int-test-resources-common)
+        - $(sub-config-communication-int-test-resources-java)
 
-extends:
-  template: /eng/pipelines/templates/stages/archetype-sdk-tests.yml
-  parameters:
-    PackageName: azure-communication-phonenumbers
+      # This only affects the phone-numbers package
+      MatrixReplace:
+        - SKIP_UPDATE_CAPABILITIES_LIVE_TESTS=false/true
+        - SKIP_SIP_ROUTING_LIVE_TESTS=false/true
+
+stages:
+  - template: /eng/pipelines/templates/stages/archetype-sdk-tests.yml
+    parameters:
+      PackageName: azure-communication-phonenumbers
       SafeName: azurecommunicationphonenumbers
+      CloudConfig: ${{ parameters.CloudConfig }}
+      Clouds: ${{ parameters.Clouds }}
+      TestMode: ${{ parameters.TestMode }}
+      Artifacts:
+        - name: ${{ parameters.PackageName }}
+          groupId: com.azure
+          safeName: ${{ parameters.SafeName }}
+      ServiceDirectory: communication
+      TestResourceDirectories: ${{ parameters.TestResourceDirectories }}
+      EnvVars:
+        SKIP_LIVE_TEST: TRUE
+        ${{ each var in parameters.EnVars }}:
+          ${{ var.key }}: ${{ var.value }}
       MatrixConfigs:
         - Name: PhoneNumbers_java_livetest_matrix
           Path: sdk/communication/azure-communication-phonenumbers/phone-numbers-livetest-matrix.json
           Selection: sparse
           GenerateVMJobs: true
-    CloudConfig:
-      Public:
-        SubscriptionConfigurations:
-          - $(sub-config-azure-cloud-test-resources)
-          - $(sub-config-communication-services-cloud-test-resources-common)
-          - $(sub-config-communication-services-cloud-test-resources-net)
-      PPE:
-        SubscriptionConfigurations:
-          - $(sub-config-communication-ppe-test-resources-common)
-          - $(sub-config-communication-ppe-test-resources-net)
-        MatrixReplace: 
-          - SKIP_UPDATE_CAPABILITIES_LIVE_TESTS=FALSE/TRUE
-      Int:
-        SubscriptionConfigurations:
-          - $(sub-config-communication-int-test-resources-common)
-          - $(sub-config-communication-int-test-resources-net)
-        MatrixReplace: 
-          - SKIP_UPDATE_CAPABILITIES_LIVE_TESTS=FALSE/TRUE
-    Clouds: Public, PPE, Int
-    TestResourceDirectories:
-      - communication/test-resources/
-    EnvVars:
-      # SKIP_PHONENUMBER_LIVE_TESTS skips certain phone number tests such as purchase and release
-      SKIP_PHONENUMBER_LIVE_TESTS: TRUE
