--- a/sdk/storage/azure-storage-blob-stress/pom.xml
+++ b/sdk/storage/azure-storage-blob-stress/pom.xml
@@ -53,6 +53,11 @@
       <artifactId>janino</artifactId>
       <version>3.1.10</version> <!-- {x-version-update;org.codehaus.janino:janino;external_dependency} -->
     </dependency>
+    <dependency>
+      <groupId>io.opentelemetry</groupId>
+      <artifactId>opentelemetry-api</artifactId>
+      <version>1.26.0</version>
+    </dependency>
   </dependencies>
 
   <build>
