--- a/sdk/generic-sdk-core/generic-core/src/main/resources/META-INF.native-image.com.generic.generic-core/native-image.properties
+++ b/sdk/generic-sdk-core/generic-core/src/main/resources/META-INF.native-image.com.generic.generic-core/native-image.properties
@@ -19,7 +19,7 @@ Args=\
                              org.slf4j.impl.StaticLoggerBinder,\
                              com.generic.core.util.logging.LogLevel,\
                              com.generic.core.util.Configuration,\
-                             com.generic.core.util.CoreUtils,\
+                             com.generic.core.implementation.util.CoreUtils,\
                              com.generic.core.util.logging.LoggingEventBuilder,\
 
 
