--- a/sdk/core/azure-core/src/main/resources/META-INF/native-image/com.azure/azure-core/reflect-config.json
+++ b/sdk/core/azure-core/src/main/resources/META-INF/native-image/com.azure/azure-core/reflect-config.json
@@ -152,7 +152,7 @@
     "allPublicMethods": true
   },
   {
-    "name":"com.azure.core.models.PollResult",
+    "name":"com.azure.core.util.polling.PollOperationDetails",
     "allDeclaredConstructors": true,
     "allPublicConstructors": true,
     "allDeclaredMethods": true,
