Do not publish azure-spring-data-cosmos

--- a/sdk/cosmos/ci.yml
+++ b/sdk/cosmos/ci.yml
@@ -111,6 +111,8 @@ extends:
         groupId: com.azure
         safeName: azurespringdatacosmos
         releaseInBatch: ${{ parameters.release_azurespringdatacosmos }}
+        skipPublishDocGithubIo: true
+        skipPublishDocMs: true
       - name: azure-cosmos-encryption
         groupId: com.azure
         safeName: azurecosmosencryption
