--- a/sdk/boms/azure-sdk-bom/pom.xml
+++ b/sdk/boms/azure-sdk-bom/pom.xml
@@ -102,6 +102,11 @@
       </dependency>
       <dependency>
         <groupId>com.azure</groupId>
+        <artifactId>azure-core-amqp</artifactId>
+        <version>2.8.11</version>
+      </dependency>
+      <dependency>
+        <groupId>com.azure</groupId>
         <artifactId>azure-core-http-netty</artifactId>
         <version>1.13.9</version>
       </dependency>
@@ -189,6 +194,21 @@
         <groupId>com.azure</groupId>
         <artifactId>azure-messaging-eventgrid</artifactId>
         <version>4.19.0</version>
+      </dependency>
+      <dependency>
+        <groupId>com.azure</groupId>
+        <artifactId>azure-messaging-eventhubs</artifactId>
+        <version>5.16.1</version>
+      </dependency>
+      <dependency>
+        <groupId>com.azure</groupId>
+        <artifactId>azure-messaging-eventhubs-checkpointstore-blob</artifactId>
+        <version>1.17.1</version>
+      </dependency>
+      <dependency>
+        <groupId>com.azure</groupId>
+        <artifactId>azure-messaging-servicebus</artifactId>
+        <version>7.14.5</version>
       </dependency>
       <dependency>
         <groupId>com.azure</groupId>
