--- a/sdk/workloads/azure-resourcemanager-workloads/pom.xml
+++ b/sdk/workloads/azure-resourcemanager-workloads/pom.xml
@@ -72,7 +72,7 @@
     <dependency>
       <groupId>com.azure.resourcemanager</groupId>
       <artifactId>azure-resourcemanager-loganalytics</artifactId>
-      <version>1.0.0-beta.3</version> <!-- {x-version-update;com.azure.resourcemanager:azure-resourcemanager-loganalytics;dependency} -->
+      <version>1.0.0</version> <!-- {x-version-update;com.azure.resourcemanager:azure-resourcemanager-loganalytics;dependency} -->
       <scope>test</scope>
     </dependency>
     <dependency>
