--- a/sdk/core/azure-core-experimental/pom.xml
+++ b/sdk/core/azure-core-experimental/pom.xml
@@ -84,7 +84,7 @@
     <dependency>
       <groupId>com.azure</groupId>
       <artifactId>azure-xml</artifactId>
-      <version>1.0.0-beta.3</version> <!-- {x-version-update;com.azure:azure-xml;current} -->
+      <version>1.0.0-beta.2</version> <!-- {x-version-update;com.azure:azure-xml;dependency} -->
       <scope>test</scope>
     </dependency>
     <dependency>
