post-archboard feedback

--- a/sdk/identity/azure-identity/pom.xml
+++ b/sdk/identity/azure-identity/pom.xml
@@ -128,12 +128,12 @@
       <version>4.11.0</version> <!-- {x-version-update;org.mockito:mockito-inline;external_dependency} -->
       <scope>test</scope>
     </dependency>
-    <dependency>
-      <groupId>com.azure</groupId>
-      <artifactId>azure-identity-brokeredauthentication</artifactId>  <!-- {x-version-update;com.azure:azure-identity-brokeredauthentication;current} -->
-      <version>1.0.0-beta.1</version>
-      <scope>test</scope>
-    </dependency>
+<!--    <dependency>-->
+<!--      <groupId>com.azure</groupId>-->
+<!--      <artifactId>azure-identity-broker</artifactId>  &lt;!&ndash; {x-version-update;com.azure:azure-identity-broker;current} &ndash;&gt;-->
+<!--      <version>1.0.0-beta.1</version>-->
+<!--      <scope>test</scope>-->
+<!--    </dependency>-->
   </dependencies>
 
   <build>
