--- a/sdk/identity/ci.yml
+++ b/sdk/identity/ci.yml
@@ -13,7 +13,7 @@ trigger:
       - sdk/identity/pom.xml
       - sdk/identity/azure-identity/pom.xml
       - sdk/identity/azure-identity-perf/pom.xml
-      - sdk/identity/azure-identity-brokeredauthentication/pom.xml
+      - sdk/identity/azure-identity-broker/pom.xml
 
 pr:
   branches:
@@ -29,7 +29,7 @@ pr:
       - sdk/identity/pom.xml
       - sdk/identity/azure-identity/pom.xml
       - sdk/identity/azure-identity-perf/pom.xml
-      - sdk/identity/azure-identity-brokeredauthentication/pom.xml
+      - sdk/identity/azure-identity-broker/pom.xml
 
 parameters:
 - name: release_dependsonlivetests
@@ -44,8 +44,8 @@ parameters:
   displayName: 'azure-identity-extensions'
   type: boolean
   default: true
-- name: release_azureidentitybrokeredauthentication
-  displayName: 'azure-identity-brokeredauthentication'
+- name: release_azureidentitybroker
+  displayName: 'azure-identity-broker'
   type: boolean
   default: true
 
@@ -64,10 +64,10 @@ extends:
         groupId: com.azure
         safeName: azureidentityextensions
         releaseInBatch: ${{ parameters.release_azureidentityextensions }}
-      - name: azure-identity-brokeredauthentication
+      - name: azure-identity-broker
         groupId: com.azure
-        safeName: azureidentitybrokeredauthentication
-        releaseInBatch: ${{ parameters.release_azureidentitybrokeredauthentication }}
+        safeName: azureidentitybroker
+        releaseInBatch: ${{ parameters.release_azureidentitybroker }}
     AdditionalModules:
       - name: azure-identity-perf
         groupId: com.azure
