--- a/sdk/identity/pom.xml
+++ b/sdk/identity/pom.xml
@@ -13,6 +13,6 @@
       <module>azure-identity</module>
       <module>azure-identity-perf</module>
       <module>azure-identity-extensions</module>
-      <module>azure-identity-brokeredauthentication</module>
+      <module>azure-identity-broker</module>
   </modules>
 </project>
