--- a/sdk/machinelearning/azure-resourcemanager-machinelearning/pom.xml
+++ b/sdk/machinelearning/azure-resourcemanager-machinelearning/pom.xml
@@ -66,7 +66,7 @@
     <dependency>
       <groupId>com.azure.resourcemanager</groupId>
       <artifactId>azure-resourcemanager-applicationinsights</artifactId>
-      <version>1.0.0-beta.5</version> <!-- {x-version-update;com.azure.resourcemanager:azure-resourcemanager-applicationinsights;dependency} -->
+      <version>1.0.0</version> <!-- {x-version-update;com.azure.resourcemanager:azure-resourcemanager-applicationinsights;dependency} -->
       <scope>test</scope>
     </dependency>
     <dependency>
