--- a/sdk/cosmos/azure-cosmos-spark_3-4_2-12/pom.xml
+++ b/sdk/cosmos/azure-cosmos-spark_3-4_2-12/pom.xml
@@ -187,7 +187,7 @@
     <dependency>
       <groupId>com.fasterxml.jackson.datatype</groupId>
       <artifactId>jackson-datatype-jsr310</artifactId>
-      <version>2.13.5</version>
+      <version>2.15.2</version> <!-- {x-version-update;com.fasterxml.jackson.datatype:jackson-datatype-jsr310;external_dependency} -->
     </dependency>
   </dependencies>
 </project>
