--- a/sdk/devtestlabs/azure-resourcemanager-devtestlabs/pom.xml
+++ b/sdk/devtestlabs/azure-resourcemanager-devtestlabs/pom.xml
@@ -14,7 +14,7 @@
 
   <groupId>com.azure.resourcemanager</groupId>
   <artifactId>azure-resourcemanager-devtestlabs</artifactId>
-  <version>1.0.0</version> <!-- {x-version-update;com.azure.resourcemanager:azure-resourcemanager-devtestlabs;current} -->
+  <version>1.1.0-beta.1</version> <!-- {x-version-update;com.azure.resourcemanager:azure-resourcemanager-devtestlabs;current} -->
   <packaging>jar</packaging>
 
   <name>Microsoft Azure SDK for DevTestLabs Management</name>
