--- a/sdk/core/azure-core-test/pom.xml
+++ b/sdk/core/azure-core-test/pom.xml
@@ -117,12 +117,12 @@
     <dependency>
       <groupId>org.eclipse.jetty</groupId>
       <artifactId>jetty-server</artifactId>
-      <version>11.0.17</version> <!-- {x-version-update;org.eclipse.jetty:jetty-server;external_dependency} -->
+      <version>9.4.53.v20231009</version> <!-- {x-version-update;org.eclipse.jetty:jetty-server;external_dependency} -->
     </dependency>
     <dependency>
       <groupId>org.eclipse.jetty</groupId>
       <artifactId>jetty-servlet</artifactId>
-      <version>11.0.17</version> <!-- {x-version-update;org.eclipse.jetty:jetty-servlet;external_dependency} -->
+      <version>9.4.53.v20231009</version> <!-- {x-version-update;org.eclipse.jetty:jetty-servlet;external_dependency} -->
     </dependency>
   </dependencies>
 
@@ -159,8 +159,8 @@
                 <include>org.junit.jupiter:junit-jupiter-api:[5.9.3]</include> <!-- {x-include-update;org.junit.jupiter:junit-jupiter-api;external_dependency} -->
                 <include>org.junit.jupiter:junit-jupiter-params:[5.9.3]</include> <!-- {x-include-update;org.junit.jupiter:junit-jupiter-params;external_dependency} -->
                 <include>org.apache.commons:commons-compress:[1.24.0]</include> <!-- {x-include-update;org.apache.commons:commons-compress;external_dependency} -->
-                <include>org.eclipse.jetty:jetty-server:[11.0.17]</include> <!-- {x-include-update;org.eclipse.jetty:jetty-server;external_dependency} -->
-                <include>org.eclipse.jetty:jetty-servlet:[11.0.17]</include> <!-- {x-include-update;org.eclipse.jetty:jetty-servlet;external_dependency} -->
+                <include>org.eclipse.jetty:jetty-server:[9.4.53.v20231009]</include> <!-- {x-include-update;org.eclipse.jetty:jetty-server;external_dependency} -->
+                <include>org.eclipse.jetty:jetty-servlet:[9.4.53.v20231009]</include> <!-- {x-include-update;org.eclipse.jetty:jetty-servlet;external_dependency} -->
               </includes>
             </bannedDependencies>
           </rules>
